--- a/app/src/main/res/layout/phone_otp_faragment.xml
+++ b/app/src/main/res/layout/phone_otp_faragment.xml
@@ -67,6 +67,7 @@
                 app:cursorColor="@color/black"
                 app:hideLineWhenFilled="true"
                 app:itemCount="6"
+                android:textColor="@color/black"
                 app:itemHeight="40dp"
                 app:itemRadius="5dp"
                 app:itemWidth="40dp"
