--- a/hackerstudent/src/main/res/layout/forget_fragment.xml
+++ b/hackerstudent/src/main/res/layout/forget_fragment.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:padding="8dp"
     tools:context="com.example.hackerstudent.auth.forgetpass.ForgetFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,15 +22,15 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
-                app:srcCompat="@drawable/resetlock"
-                android:contentDescription="@string/resend_otp" />
+                android:contentDescription="@string/resend_otp"
+                app:srcCompat="@drawable/resetlock" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:paddingTop="5dp"
                 android:gravity="center"
+                android:paddingTop="5dp"
                 android:text="Enter your Registered E-mail address and,\nPhone Number."
                 android:textColor="@color/black"
                 android:textSize="15sp" />
@@ -71,7 +72,8 @@
                     android:id="@+id/phoneText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="phone" />
+                    android:inputType="phone"
+                    android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
@@ -100,7 +102,8 @@
                     android:id="@+id/emailText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="textEmailAddress" />
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
