--- a/hackerstudent/src/main/res/layout/login_with_email_password.xml
+++ b/hackerstudent/src/main/res/layout/login_with_email_password.xml
@@ -65,7 +65,8 @@
                     android:id="@+id/email_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="textEmailAddress" />
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -89,7 +90,8 @@
                     android:id="@+id/password_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <CheckBox
