--- a/hackerstudent/src/main/res/layout/phone_otp_faragment.xml
+++ b/hackerstudent/src/main/res/layout/phone_otp_faragment.xml
@@ -45,8 +45,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="sans-serif-condensed-medium"
-            tools:text="+918004048261"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:text="+918004048261" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,6 +64,7 @@
                 android:cursorVisible="true"
                 android:inputType="number"
                 android:itemBackground="@color/otp_box_bg"
+                android:textColor="@color/black"
                 app:cursorColor="@color/black"
                 app:hideLineWhenFilled="true"
                 app:itemCount="6"
