--- a/app/src/main/res/layout/fragment_order_list.xml
+++ b/app/src/main/res/layout/fragment_order_list.xml
@@ -17,7 +17,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="100dp"
             android:background="#fff"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -120,6 +120,22 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/session_count"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:background="@color/darkBlue"
+                android:fontFamily="@font/crimson_text_bold"
+                android:padding="6dp"
+                android:text="Onboarding form"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@+id/upgradeButton" />
+
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/upgradeButton"
                 android:layout_width="match_parent"
