tutorials added memory booster col span 1

--- a/app/src/main/res/layout/memory_booster_item.xml
+++ b/app/src/main/res/layout/memory_booster_item.xml
@@ -16,8 +16,8 @@
 
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/speed_booster_item_image"
-                android:layout_width="150dp"
-                android:layout_height="100dp"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitXY"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
-                android:textAlignment="center"
+                android:textAlignment="viewStart"
                 android:textAppearance="@style/AppTheme.TextAppearance.Body2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
