--- a/app/src/main/res/navigation/todos_navigation.xml
+++ b/app/src/main/res/navigation/todos_navigation.xml
@@ -660,6 +660,10 @@
             app:destination="@id/expertSuggestionsFragment" />
 
     </fragment>
+    <fragment
+        android:id="@+id/tutorialFragment"
+        android:name="com.uptodd.uptoddapp.ui.tutorials.TutorialFragment"
+        android:label="Tutorial" />
 
 
     <!--    <fragment-->
