media bug fixes

--- a/app/src/main/res/navigation/todos_navigation.xml
+++ b/app/src/main/res/navigation/todos_navigation.xml
@@ -663,7 +663,7 @@
     <fragment
         android:id="@+id/tutorialFragment"
         android:name="com.uptodd.uptoddapp.ui.tutorials.TutorialFragment"
-        android:label="Tutorial" />
+        android:label="App tutorials" />
 
 
     <!--    <fragment-->
