--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -656,7 +656,7 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="32dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="Subscription Start Date"
+                    android:text="Product Purchased On"
                     android:textColor="@color/textGrey"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -693,7 +693,7 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="32dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="Subscription End Date"
+                    android:text="Product Expiry On"
                     android:textColor="@color/textGrey"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
