--- a/app/src/main/res/layout/fragment_refer.xml
+++ b/app/src/main/res/layout/fragment_refer.xml
@@ -77,7 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="6dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="32dp"
                     android:background="@drawable/doctor_refer_details_bg"
@@ -85,7 +85,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/gif">
+                    app:layout_constraintTop_toBottomOf="@+id/gif"
+                    app:layout_constraintVertical_bias="0.120000005">
 
                     <TextView
                         android:id="@+id/text_inr_usd"
@@ -98,6 +99,7 @@
                         android:textColor="#188816"
                         android:textSize="18sp"
                         android:textStyle="bold" />
+
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -223,7 +225,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:orientation="horizontal"
-                    android:visibility="gone"
                     android:weightSum="5"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -261,7 +262,7 @@
                             android:fontFamily="@font/montserrat"
                             android:gravity="start"
                             android:text="@string/code"
-                            android:textColor="#188816"
+                            android:textColor="#025700"
                             android:textSize="22sp" />
 
                     </LinearLayout>
@@ -324,14 +325,34 @@
                     android:id="@+id/textView35"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
                     android:padding="6dp"
+                    android:text="Special discount to all your referrals"
                     android:textStyle="bold"
-                    android:text="@string/p_note_reffer"
+                    android:textSize="16sp"
+                    android:textColor="#188816"
                     app:layout_anchorGravity="bottom|center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_form" />
+                    app:layout_constraintTop_toBottomOf="@+id/layout_referralCode" />
+
+                <Button
+                    android:id="@+id/refferalPolicy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/blue_button"
+                    android:padding="10dp"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="20dp"
+                    android:text="Referral policy"
+                    android:textColor="@color/timeDisplayWhite"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView35" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
