--- a/app/src/main/res/layout/generate_card_view_pager_item.xml
+++ b/app/src/main/res/layout/generate_card_view_pager_item.xml
@@ -21,6 +21,7 @@
         android:layout_height="400dp"
         android:layout_gravity="center_horizontal"
         android:layout_margin="8dp"
+        app:cardElevation="0dp"
         app:cardCornerRadius="43dp">
 
         <ImageView
