--- a/app/src/main/res/layout/item_act_podcast.xml
+++ b/app/src/main/res/layout/item_act_podcast.xml
@@ -3,9 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="10dp"
-    android:layout_marginVertical="10dp"
     android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="10dp"
+        android:background="@drawable/bg_border"
+        android:orientation="vertical">
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/item_act_podcast_videoThumbnail"
@@ -21,4 +26,5 @@
         android:padding="8dp"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
         tools:text="Sample Title" />
+    </LinearLayout>
 </LinearLayout>
