--- a/app/src/main/res/layout/layout_terms_condition.xml
+++ b/app/src/main/res/layout/layout_terms_condition.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/white"
-            android:elevation="14dp"
+            app:cardElevation="0dp"
             app:cardCornerRadius="14dp"
             android:layout_alignParentBottom="true"
             >
