--- a/app/src/main/res/layout/upcoming_session_recyclerview_item.xml
+++ b/app/src/main/res/layout/upcoming_session_recyclerview_item.xml
@@ -13,6 +13,7 @@
             android:layout_height="match_parent"
             android:layout_margin="6dp"
             app:cardCornerRadius="12dp"
+            app:cardElevation="0dp"
             app:cardBackgroundColor="@color/light_blue">
 
 
