--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -10,7 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="20dp"
+        android:layout_margin="10dp"
+        android:padding="10dp"
         android:text="@string/your_daily_score_board"
         android:textColor="@color/black"
         android:textSize="16sp"
