--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -87,6 +87,7 @@
                 android:fontFamily="@font/montserrat"
                 android:text="@string/or_log_in_with"
                 android:textColor="@color/textGrey"
+                android:visibility="gone"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -99,6 +100,7 @@
                 android:layout_height="32dp"
                 android:layout_marginStart="64dp"
                 android:layout_marginTop="24dp"
+                android:visibility="gone"
                 android:background="#fff"
                 android:contentDescription="@string/facebook"
                 android:enabled="@{loginViewModel.enableInput}"
@@ -113,6 +115,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginEnd="64dp"
+                android:visibility="gone"
                 android:background="#fff"
                 android:contentDescription="@string/google"
                 android:enabled="@{loginViewModel.enableInput}"
