--- a/app/src/main/res/layout/item_act_sample.xml
+++ b/app/src/main/res/layout/item_act_sample.xml
@@ -23,6 +23,7 @@
         android:id="@+id/videoThumbnail"
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/app_icon" />
 
             <RelativeLayout
