--- a/app/src/main/res/layout/fragment_refer.xml
+++ b/app/src/main/res/layout/fragment_refer.xml
@@ -169,23 +169,43 @@
                         android:textColor="@color/formFieldHeading"
                         android:textSize="14sp" />
 
-
-                    <EditText
-                        android:id="@+id/editText_phone"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_gravity="center"
+                        android:fitsSystemWindows="true"
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="32dp"
                         android:background="@drawable/round_edittext"
-                        android:fontFamily="@font/montserrat"
-                        android:inputType="phone"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="5dp"
-                        android:paddingRight="10dp"
-                        android:paddingBottom="5dp"
-                        android:textColor="@color/textGrey"
-                        android:textSize="14sp" />
+                        android:layout_height="wrap_content">
+
+                        <Spinner
+                            android:id="@+id/loginSpinner"
+                            android:spinnerMode="dropdown"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:background="@drawable/round_edittext"
+                            android:layout_height="match_parent"
+                            />
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="number"
+                            android:background="#f1f1f1"
+                            android:id="@+id/editText_phone"
+                            android:textSize="15sp"
+                            android:paddingLeft="10dp"
+                            android:paddingTop="5dp"
+                            android:layout_margin="6dp"
+                            android:paddingRight="10dp"
+                            android:paddingBottom="5dp"
+                            android:layout_gravity="center"
+                            android:textAlignment="center"
+                            android:hint="Enter Mobile Number"/>
+                    </LinearLayout>
+
 
                     <TextView
                         android:id="@+id/textView_error"
