--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -142,6 +142,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:visibility="gone"
                     android:enabled="@{loginViewModel.enableInput}"
                     android:fontFamily="@font/montserrat"
                     android:paddingHorizontal="16dp"
