Navigation issue fixed for ci/cd pipeline

--- a/app/src/main/res/navigation/music_navigation.xml
+++ b/app/src/main/res/navigation/music_navigation.xml
@@ -26,5 +26,8 @@
         <argument
             android:name="id"
             app:argType="integer" />
+        <argument
+            android:name="file"
+            app:argType="com.uptodd.uptoddapp.database.media.music.MusicFiles" />
     </fragment>
 </navigation>
