--- a/app/src/main/res/navigation/poem_navigation.xml
+++ b/app/src/main/res/navigation/poem_navigation.xml
@@ -25,6 +25,9 @@
             app:argType="string" />
         <argument
             android:name="id"
-            app:argType="long" />
+            app:argType="integer" />
+        <argument
+            android:name="file"
+            app:argType="com.uptodd.uptoddapp.database.media.music.MusicFiles" />
     </fragment>
 </navigation>
