--- a/app/src/main/res/layout/poem_list_item.xml
+++ b/app/src/main/res/layout/poem_list_item.xml
@@ -14,7 +14,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/poem_item_image"
