--- a/app/src/main/res/layout/development_tracker_recycler_view_item.xml
+++ b/app/src/main/res/layout/development_tracker_recycler_view_item.xml
@@ -4,11 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="8dp"
+
+        app:cardBackgroundColor="@color/light_blue"
         app:cardElevation="0dp"
         app:cardCornerRadius="16dp">
 
@@ -21,7 +28,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:scaleType="fitXY"
+                android:src="@drawable/kit_tutorial_icon"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +50,6 @@
                     android:id="@+id/month_item_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="4dp"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:textAppearance="@style/AppTheme.TextAppearance.Body2"
@@ -55,10 +61,10 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="4dp"
                     android:textAlignment="center"
                     android:textColor="@color/brown_lg"
                     android:text="View Details"
+                    android:layout_marginBottom="4dp"
                     android:textAppearance="@style/AppTheme.TextAppearance.Body2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/poem_item_image"
@@ -71,4 +77,5 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+    </RelativeLayout>
 </layout>
